fix: use negative margin on viewport to bleed past container padding

--- a/assets/css/sections/product-section.css
+++ b/assets/css/sections/product-section.css
@@ -1,7 +1,3 @@
-.product.container {
-  padding-right: 0;
-}
-
 .product-title {
   margin-bottom: 40px;
 }
@@ -13,6 +9,7 @@
 .product-viewport {
   overflow-x: auto;
   scroll-behavior: smooth;
+  margin-right: calc(-1 * var(--container-padding));
 }
 
 .product-viewport::-webkit-scrollbar {
@@ -44,6 +41,10 @@
 }
 
 @media (width > 1300px) {
+  .product-viewport{
+    margin-right: 0;
+  }
+
   .product-control {
     display: flex;
     top: 191px;
